...
                    // Features section
                    Column(
                        horizontalAlignment = Alignment.CenterHorizontally,
                        verticalArrangement = Arrangement.spacedBy(16.dp),
                    ) {
                        Text(
                            text = "Features:",
                            style = MaterialTheme.typography.titleLarge.copy(fontWeight = FontWeight.Bold),
                            color = MaterialTheme.colorScheme.primary,
                        )

                        Column(
                            horizontalAlignment = Alignment.Start,
...
                    modifier = Modifier.size(50.dp),
                    tint = MaterialTheme.colorScheme.onPrimary,
                )
            }
        }
        Text(
            text = "About CultureQuest",
            style = MaterialTheme.typography.displayLarge.copy(fontWeight = FontWeight.Bold),
            color = MaterialTheme.colorScheme.onPrimary,
            textAlign = TextAlign.Center,
            modifier = Modifier.align(Alignment.Center), // Center in the Box
        )
    }
...
    // Defines the available theme options.
    val themes = listOf(Theme.LIGHT, Theme.DARK) // Exclude SYSTEM theme

    Column(horizontalAlignment = Alignment.CenterHorizontally) {
        // Title for the theme selector section
        Text(
            text = "Theme",
            style = MaterialTheme.typography.titleLarge.copy(fontWeight = FontWeight.Bold),
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier.padding(bottom = 12.dp),
        )
        // Row to display theme options side-by-side
        Row(
...
